# agentic-ai-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/core/: __init__.py  config.py  exceptions.py
app/domains/: __init__.py
app/domains/ai_tasks/: __init__.py  constants.py
app/domains/documents/: __init__.py
app/prompts/: templates.py
app/routers/: ai.py  documents.py
app/schemas/: __init__.py  ask.py  documents.py  tasks.py
app/services/: __init__.py  chunking_service.py  embedding_service.py  openai_client.py  openai_service.py
app/shared/: __init__.py  config.py  error_handlers.py  exceptions.py  lifespan.py  logging.py  middleware.py  openai_types.py
app/shared/infrastructure/: __init__.py  openai_client.py
app/storage/: vector_store.py
app/web/: __init__.py  router.py
app/web/static/: app.js  index.html  styles.css
doc/: 0. GLOSSARY.md  2. VECTOR_DATABASE_USAGE.md  3. API_CURL_EXAMPLES.md  4. GLOSSARY.md  4. RAG_PIPELINE.md  5. TOOL_CALLING.md  6. AGENTS.md  DOCUMENTS_SEMANTIC_SEARCH.md  VECTOR_DATABASES_PROGRESS.md
tests/: conftest.py
tests/api/: test_ai_tasks_router.py  test_app.py  test_documents_router.py
tests/integration/: conftest.py  fakes.py  test_ai_tasks_flow.py  test_documents_flow.py  test_live_openai.py  test_qdrant_store.py
tests/unit/ai_tasks/: test_prompts.py  test_response_formats.py
tests/unit/api/: test_ai_tasks_schemas.py  test_dependencies.py  test_documents_schemas.py
(+55 files in other folders)
