[tool.poetry]
name = "agentic-ai-core"
version = "0.1.0"
description = "A production-style AI backend built with FastAPI and OpenAI — async LLM calls, DDD design, and a full RAG pipeline powered by Qdrant."
authors = ["Ervand Agadzhanyan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.136.3"
uvicorn = {version = "^0.49.0", extras = ["standard"]}
openai = "^2.41.0"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
python-multipart = ">=0.0.32,<1.0"
qdrant-client = "^1.18.0"
pypdf = "^6.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
testcontainers = "^4.14.2"
ruff = "^0.9.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
